--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
               </div>
             </div>
             <div class="logo">
-              <img src="./images/logo.svg" alt="logo" class="img-logo" />
+              <a href="index.html">
+                <img src="./images/logo.svg" alt="logo" class="img-logo" />
+              </a>
             </div>
             <div class="search-container">
               <i class="fa-solid fa-magnifying-glass"></i>
