--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               </div>
             </div>
             <div class="logo">
-              <a href="index.html">
+              <a href="./">
                 <img src="./images/logo.svg" alt="logo" class="img-logo" />
               </a>
             </div>
@@ -48,9 +48,7 @@
           <nav class="side-nav" role="navigation">
             <ul class="nav-links-primary">
               <li>
-                <a href="index.html"
-                  ><img src="./musica-icons/home.png" alt=""
-                /></a>
+                <a href="./"><img src="./musica-icons/home.png" alt="" /></a>
               </li>
               <li>
                 <a href="#"
