--- a/top-chart-index.html
+++ b/top-chart-index.html
@@ -18,7 +18,9 @@
         <div class="header-header">
           <nav class="header-nav" role="navigation">
             <div class="logo">
-              <img src="./images/logo.svg" alt="logo" class="img-logo" />
+              <a href="./index.html">
+                <img src="./images/logo.svg" alt="logo" class="img-logo" />
+              </a>
             </div>
             <div class="search-container">
               <i class="fa-solid fa-magnifying-glass"></i>
@@ -40,7 +42,9 @@
           <nav class="side-nav" role="navigation">
             <ul class="nav-links-primary">
               <li>
-                <a href="#"><img src="./musica-icons/home.png" alt="" /></a>
+                <a href="./index.html"
+                  ><img src="./musica-icons/home.png" alt=""
+                /></a>
               </li>
               <li>
                 <a href="#"
