--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <nav class="side-nav" role="navigation">
             <ul class="nav-links-primary">
               <li>
-                <a href="./index.html">
+                <a href="./index.html"
                   ><img src="./musica-icons/home.png" alt=""
                 /></a>
               </li>
