--- a/top-chart-index.html
+++ b/top-chart-index.html
@@ -18,7 +18,7 @@
         <div class="header-header">
           <nav class="header-nav" role="navigation">
             <div class="logo">
-              <a href="./index.html">
+              <a href="https://musica-web.vercel.app/">
                 <img src="./images/logo.svg" alt="logo" class="img-logo" />
               </a>
             </div>
@@ -42,7 +42,7 @@
           <nav class="side-nav" role="navigation">
             <ul class="nav-links-primary">
               <li>
-                <a href="./index.html"
+                <a href="https://musica-web.vercel.app/"
                   ><img src="./musica-icons/home.png" alt=""
                 /></a>
               </li>
