--- a/top-chart-index.html
+++ b/top-chart-index.html
@@ -41,7 +41,7 @@
         <div class="hero-section">
           <nav class="side-nav" role="navigation">
             <ul class="nav-links-primary">
-              <li>
+              <li aria-label="home">
                 <a href="https://musica-web.vercel.app/"
                   ><img src="./musica-icons/home.png" alt=""
                 /></a>
