--- a/index.html
+++ b/index.html
@@ -21,6 +21,47 @@
               <div class="hamburger">
                 <span class="line-1"></span>
                 <span class="line-2"></span>
+                <div class="hamburger-links">
+                  <ul class="hamburger-links-list">
+                    <li class="hamburger-links-list-item">
+                      <a href="https://musica-web.vercel.app/"
+                        ><img src="./musica-icons/home.png" alt="" />Home</a
+                      >
+                    </li>
+                    <li class="hamburger-links-list-item">
+                      <a href="#"
+                        ><img
+                          src="./musica-icons/playlist-blanc.png"
+                          alt=""
+                        />My collections</a
+                      >
+                    </li>
+                    <li class="hamburger-links-list-item">
+                      <a href="#"
+                        ><img src="./musica-icons/radio.png" alt="" />Radio</a
+                      >
+                    </li>
+                    <li class="hamburger-links-list-item">
+                      <a href="#"
+                        ><img src="./musica-icons/videos.png" alt="" />music
+                        videos</a
+                      >
+                    </li>
+                    <li class="hamburger-links-list-item">
+                      <a href="#"
+                        ><img
+                          src="./musica-icons/profile.png"
+                          alt=""
+                        />Profile</a
+                      >
+                    </li>
+                    <li class="hamburger-links-list-item">
+                      <a href="#"
+                        ><img src="./musica-icons/Vector.png" alt="" />logout</a
+                      >
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
             <div class="logo">
