--- a/index.html
+++ b/index.html
@@ -252,42 +252,42 @@
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (1).png" alt="" />
+              <img src="./images/Rectangle 15.png" alt="" />
               <h4>Mountain</h4>
               <p>Krisx</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (2).png" alt="" />
+              <img src="./images/Rectangle 16.png" alt="" />
               <h4>Limits</h4>
               <p>John Dillion</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (3).png" alt="" />
+              <img src="./images/Rectangle 17.png" alt="" />
               <h4>Everything's black</h4>
               <p>Ameed</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (4).png" alt="" />
+              <img src="./images/Rectangle 18.png" alt="" />
               <h4>Cancelled</h4>
               <p>Eminem</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (5).png" alt="" />
+              <img src="./images/Rectangle 19.png" alt="" />
               <h4>Nomad</h4>
               <p>Makrol Eli</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (6).png" alt="" />
+              <img src="./images/Rectangle 20.png" alt="" />
               <h4>Blind</h4>
               <p>Wiz zee</p>
             </div>
@@ -301,49 +301,49 @@
         <div class="carousel-wrapper">
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14.png" alt="" />
+              <img src="./images/Rectangle 19.png" alt="" />
               <h4>Life in a bubble</h4>
               <p>The van</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (1).png" alt="" />
+              <img src="./images/Rectangle 14.png" alt="" />
               <h4>Mountain</h4>
               <p>Krisx</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (2).png" alt="" />
+              <img src="./images/Rectangle 17.png" alt="" />
               <h4>Limits</h4>
               <p>John Dillion</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (3).png" alt="" />
+              <img src="./images/Rectangle 16.png" alt="" />
               <h4>Everything's black</h4>
               <p>Ameed</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (4).png" alt="" />
+              <img src="./images/Rectangle 20.png" alt="" />
               <h4>Cancelled</h4>
               <p>Eminem</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (5).png" alt="" />
+              <img src="./images/Rectangle 15.png" alt="" />
               <h4>Nomad</h4>
               <p>Makrol Eli</p>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="./images/Rectangle 14 (6).png" alt="" />
+              <img src="./images/Rectangle 18.png" alt="" />
               <h4>Blind</h4>
               <p>Wiz zee</p>
             </div>
@@ -351,6 +351,32 @@
         </div>
       </section>
       <section class="music-player-container">
+        <!-- Arrow down icon -->
+        <div class="arrow-down">
+          <i class="fa-solid fa-chevron-down" id="mobile-player-toggle-btn"></i>
+        </div>
+        <div class="mobile-player-upper-element">
+          <div class="arrow-down">
+            <i class="fa-solid fa-chevron-down"></i>
+          </div>
+          <p>
+            Playing from your library
+            <span class="mobile-player-category">Now Playing</span>
+          </p>
+          <!-- Three dots menu icon -->
+          <div class="three-dots-menu">
+            <i class="fa-solid fa-ellipsis-v"></i>
+          </div>
+        </div>
+        <div class="mobile-player-details">
+          <div class="mobile-player-track-art-container">
+            <img class="mobile-player-track-art" />
+          </div>
+          <div>
+            <h2 class="mobile-player-track-name">Asake</h2>
+            <p class="mobile-player-track-artist">Organise</p>
+          </div>
+        </div>
         <div class="music-player">
           <div class="player">
             <div class="details">
@@ -362,6 +388,9 @@
             </div>
             <div class="buttons-container">
               <div class="buttons">
+                <div class="rand-track">
+                  <i class="fa-solid fa-random"></i>
+                </div>
                 <div class="prev-track" onclick="prevTrack()">
                   <i class="fa fa-step-backward fa-2x"></i>
                 </div>
@@ -370,6 +399,9 @@
                 </div>
                 <div class="next-track" onclick="nextTrack()">
                   <i class="fa fa-step-forward fa-2x"></i>
+                </div>
+                <div class="repeat-track">
+                  <i class="fa-solid fa-repeat"></i>
                 </div>
               </div>
               <div class="seek-container">
